--- a/translations/footer/footerpl.json
+++ b/translations/footer/footerpl.json
@@ -1,1 +1,107 @@
-[{"title":"Social Media","id":1,"data":[{"text":"943300","src":"https://www.iconfinder.com/search?q=telegram","svg":"svg_dateVal_1719235109467_facebook.png","index":"0"},{"text":"newtext","src":"https://www.iconfinder.com/search?q=telegram","svg":"iconSVG_dateVal_1719239127587_Hello_Kitty.webp","index":0},{"text":"newtext","src":"https://www.iconfinder.com/search?q=telegram","svg":"iconSVG_dateVal_1719239165430_facebook.png","index":1}]},{"title":"Schedule","id":0,"data":[{"day":"","closed":"closed","isOpen":false,"time":{"from":"","to":""}}]},{"title":"Site Agreements","id":2,"data":[{"text":"","src":""},{"text":"agree","src":"https://www.iconfinder.com/search?q=telegram","index":0}]}]
+[
+    {
+      "title": "Media społecznościowe",
+      "id": 1,
+      "data": [
+        {
+          "text": "Telegram",
+          "src": "https://t.me/cdfinancebot",
+          "svg": "6214705_air_airplane_logo_paper_plane_icon.png",
+          "index": "0"
+        },
+        {
+          "text": "Facebook",
+          "src": "https://www.facebook.com/cd.finance.poland",
+          "svg": "2959749_facebook_icon.png",
+          "index": "1"
+        },
+        {
+          "text": "WhatsApp",
+          "src": "https://wa.me/message/7LWC3YO5DXYSP1",
+          "svg": "6214705_air_airplane_logo_paper_plane_icon.png",
+          "index": "2"
+        },
+        {
+          "text": "Instagram",
+          "src": "https://www.instagram.com/cd.finance/",
+          "svg": "1161953_instagram_icon.png",
+          "index": "3"
+        }
+      ]
+    },
+    {
+      "title": "Godziny pracy",
+      "id": 0,
+      "data": [
+        {
+          "day": "Pon",
+          "closed": "Zamknięte",
+          "isOpen": true,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        },
+        {
+          "day": "Wt",
+          "closed": "Zamknięte",
+          "isOpen": true,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        },
+        {
+          "day": "Śr",
+          "closed": "Zamknięte",
+          "isOpen": true,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        },
+        {
+          "day": "Czw",
+          "closed": "Zamknięte",
+          "isOpen": true,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        },
+        {
+          "day": "Pt",
+          "closed": "Zamknięte",
+          "isOpen": true,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        },
+        {
+          "day": "Sob",
+          "closed": "Zamknięte",
+          "isOpen": false,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        },
+        {
+          "day": "Niedz",
+          "closed": "Zamknięte",
+          "isOpen": false,
+          "time": {
+            "from": "8:00",
+            "to": "18:00"
+          }
+        }
+      ]
+    },
+    {
+      "title": "Warunki korzystania z serwisu",
+      "id": 2,
+      "data": []
+    }
+  ]
+  
