--- a/translations/other/otherpl.json
+++ b/translations/other/otherpl.json
@@ -1,22 +1,21 @@
 {
     "h1": {
-        "services": "",
-        "whywe": "",
-        "faq": "",
-        "opinions": "",
-        "form": ""
+        "services": "Nasze usługi",
+        "whywe": "Dlaczego my?",
+        "faq": "Pytania i odpowiedzi",
+        "opinions": "Opinie klientów",
+        "form": "Formularz kontaktowy"
     },
-    "logo": "/...fgfd",
-    "feedbackImg": "",
+    "logo": "gold-logo.png",
     "buttons": {
-        "services": "",
-        "faq": "",
-        "opinions": "",
-        "form": ""
+        "services": "Do usługi",
+        "faq": "Do usługi",
+        "opinions": "Opinie",
+        "form": "Wyślij"
     },
     "map": {
-        "adress": "",
-        "link": "",
-        "coordination": []
+        "adress": "Ks. Piotra Skargi 56, 03-516 Warszawa, Targówek",
+        "link": "https://www.google.com/maps/place/The+Best+Result+-+Biuro+Rachunkowe+Ksi%C4%99gowe+Leasing+Ubezpieczenia+Warszawa+%D0%91%D1%83%D1%85%D0%B3%D0%B0%D0%BB%D1%82%D0%B5%D1%80%D1%96%D1%8F+%D0%A1%D1%82%D1%80%D0%B0%D1%85%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F+%D0%9B%D1%96%D0%B7%D0%B8%D0%BD%D0%B3+%D0%86%D0%BF%D0%BE%D1%82%D0%B5%D0%BA%D0%B0+%D0%9F%D0%BE%D0%BB%D1%8C%D1%89%D0%B0/@52.2700317,21.0449526,17z/data=!3m1!4b1!4m6!3m5!1s0x471ecd3b7061cd29:0x282dcd5a6166385!8m2!3d52.2700284!4d21.0475275!16s%2Fg%2F11vwn_01wk?hl=pl-PL&entry=ttu",
+        "coordination": [52.270077640569475, 21.047570415341475]
     }
 }
