--- a/translations/services/servicesru.json
+++ b/translations/services/servicesru.json
@@ -1,1 +1,31 @@
-[{"title":"Лизинг","description":"Ваша фирма требует расширения? Нужны автомобили, офисы? Мы с этим Вам поможем! Найдём идеальные для Вас условия и всё оформим.","bg":"bgPhoto_dateVal_1719326336198_leasing.jpg","svg":"iconSVG_dateVal_1719326612604_carcar.png","id":2},{"title":"Ипотечные кредиты","description":"Проанализируем все условия и поможем Вам со всеми вопросами.","bg":"bgPhoto_dateVal_1719326803085_bad-credit-home-loan.jpeg","svg":"iconSVG_dateVal_1719326803083_househouse.png","id":3},{"title":"Страхование","description":"Специализируемся на разносторонних предложениях, а именно: все виды страхования для авто, туристическое, на имущество для владельцев и съемщиков, медицинские абонементы.","bg":"bgPhoto_dateVal_1719327198798_incurence.jpg","svg":"iconSVG_dateVal_1719327198797_healthcare.png","id":4},{"title":"Инвестиции","description":"Хотите чтобы Ваши деньги работали на вас? Мы это устроим, финансовые консультации и помощь в капиталовложении.","bg":"bgPhoto_dateVal_1719327522555_investinvest.jpg","svg":"iconSVG_dateVal_1719327522553_2639841_investment_icon.png","id":5}]
+[
+    {
+      "title": "Лизинг",
+      "description": "Ваша фирма требует расширения? Нужны автомобили, офисы? Мы с этим Вам поможем! Найдём идеальные для Вас условия и всё оформим.",
+      "bg": "bgPhoto_dateVal_1719326336198_leasing.jpg",
+      "svg": "iconSVG_dateVal_1719326612604_carcar.svg",
+      "id": 2
+    },
+    {
+      "title": "Ипотечные кредиты",
+      "description": "Проанализируем все условия и поможем Вам со всеми вопросами.",
+      "bg": "bgPhoto_dateVal_1719326803085_bad-credit-home-loan.jpeg",
+      "svg": "iconSVG_dateVal_1719326803083_househouse.svg",
+      "id": 3
+    },
+    {
+      "title": "Страхование",
+      "description": "Специализируемся на разносторонних предложениях, а именно: все виды страхования для авто, туристическое, на имущество для владельцев и съемщиков, медицинские абонементы.",
+      "bg": "bgPhoto_dateVal_1719327198798_incurence.jpg",
+      "svg": "iconSVG_dateVal_1719327198797_healthcare.svg",
+      "id": 4
+    },
+    {
+      "title": "Инвестиции",
+      "description": "Хотите чтобы Ваши деньги работали на вас? Мы это устроим, финансовые консультации и помощь в капиталовложении.",
+      "bg": "bgPhoto_dateVal_1719327522555_investinvest.jpg",
+      "svg": "iconSVG_dateVal_1719327522553_2639841_investment_icon.svg",
+      "id": 5
+    }
+  ]
+  
