All tools ready
.

--- a/translations/footer/footerpl.json
+++ b/translations/footer/footerpl.json
@@ -1,107 +1,1 @@
-[
-    {
-      "title": "Media społecznościowe",
-      "id": 1,
-      "data": [
-        {
-          "text": "Telegram",
-          "src": "https://t.me/cdfinancebot",
-          "svg": "6214705_air_airplane_logo_paper_plane_icon.png",
-          "index": "0"
-        },
-        {
-          "text": "Facebook",
-          "src": "https://www.facebook.com/cd.finance.poland",
-          "svg": "2959749_facebook_icon.png",
-          "index": "1"
-        },
-        {
-          "text": "WhatsApp",
-          "src": "https://wa.me/message/7LWC3YO5DXYSP1",
-          "svg": "6214705_air_airplane_logo_paper_plane_icon.png",
-          "index": "2"
-        },
-        {
-          "text": "Instagram",
-          "src": "https://www.instagram.com/cd.finance/",
-          "svg": "1161953_instagram_icon.png",
-          "index": "3"
-        }
-      ]
-    },
-    {
-      "title": "Godziny pracy",
-      "id": 0,
-      "data": [
-        {
-          "day": "Pon",
-          "closed": "Zamknięte",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Wt",
-          "closed": "Zamknięte",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Śr",
-          "closed": "Zamknięte",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Czw",
-          "closed": "Zamknięte",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Pt",
-          "closed": "Zamknięte",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Sob",
-          "closed": "Zamknięte",
-          "isOpen": false,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Niedz",
-          "closed": "Zamknięte",
-          "isOpen": false,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        }
-      ]
-    },
-    {
-      "title": "Warunki korzystania z serwisu",
-      "id": 2,
-      "data": []
-    }
-  ]
-  
+[{"title":"Media społecznościowe","id":1,"data":[{"text":"Telegram","src":"https://t.me/cdfinancebot","svg":"6214705_air_airplane_logo_paper_plane_icon.png","index":"0"},{"text":"Facebook","src":"https://www.facebook.com/cd.finance.poland","svg":"2959749_facebook_icon.png","index":"1"},{"text":"WhatsApp","src":"https://wa.me/message/7LWC3YO5DXYSP1","svg":"svg_dateVal_1720532062970_whatsapp.svg","index":"2"},{"text":"Instagram","src":"https://www.instagram.com/cd.finance/","svg":"1161953_instagram_icon.png","index":"3"}]},{"title":"Godziny pracy","id":0,"data":[{"day":"Пн","closed":"Зачинено","isOpen":true,"time":{"from":"10:00","to":"18:00"}},{"day":"Wt","closed":"Zamknięte","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Śr","closed":"Zamknięte","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Czw","closed":"Zamknięte","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Pt","closed":"Zamknięte","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Sob","closed":"Zamknięte","isOpen":false,"time":{"from":"8:00","to":"18:00"}},{"day":"Niedz","closed":"Zamknięte","isOpen":false,"time":{"from":"8:00","to":"18:00"}}]},{"title":"Warunki korzystania z serwisu","id":2,"data":[]}]
