--- a/translations/footer/footerru.json
+++ b/translations/footer/footerru.json
@@ -1,107 +1,1 @@
-[
-    {
-      "title": "Социальные сети",
-      "id": 1,
-      "data": [
-        {
-          "text": "Telegram",
-          "src": "https://t.me/cdfinancebot",
-          "svg": "6214705_air_airplane_logo_paper_plane_icon.png",
-          "index": "0"
-        },
-        {
-          "text": "Facebook",
-          "src": "https://www.facebook.com/cd.finance.poland",
-          "svg": "2959749_facebook_icon.png",
-          "index": "1"
-        },
-        {
-          "text": "WhatsApp",
-          "src": "https://wa.me/message/7LWC3YO5DXYSP1",
-          "svg": "6214705_air_airplane_logo_paper_plane_icon.png",
-          "index": "2"
-        },
-        {
-          "text": "Instagram",
-          "src": "https://www.instagram.com/cd.finance/",
-          "svg": "1161953_instagram_icon.png",
-          "index": "3"
-        }
-      ]
-    },
-    {
-      "title": "Часы работы",
-      "id": 0,
-      "data": [
-        {
-          "day": "Пн",
-          "closed": "Закрыто",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Вт",
-          "closed": "Закрыто",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Ср",
-          "closed": "Закрыто",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Чт",
-          "closed": "Закрыто",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Пт",
-          "closed": "Закрыто",
-          "isOpen": true,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Сб",
-          "closed": "Закрыто",
-          "isOpen": false,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        },
-        {
-          "day": "Вс",
-          "closed": "Закрыто",
-          "isOpen": false,
-          "time": {
-            "from": "8:00",
-            "to": "18:00"
-          }
-        }
-      ]
-    },
-    {
-      "title": "Соглашения сайта",
-      "id": 2,
-      "data": []
-    }
-  ]
-  
+[{"title":"Социальные сети","id":1,"data":[{"text":"Telegram","src":"https://t.me/cdfinancebot","svg":"6214705_air_airplane_logo_paper_plane_icon.png","index":"0"},{"text":"Facebook","src":"https://www.facebook.com/cd.finance.poland","svg":"2959749_facebook_icon.png","index":"1"},{"text":"WhatsApp","src":"https://wa.me/message/7LWC3YO5DXYSP1","svg":"svg_dateVal_1720532062970_whatsapp.svg","index":"2"},{"text":"Instagram","src":"https://www.instagram.com/cd.finance/","svg":"1161953_instagram_icon.png","index":"3"}]},{"title":"Часы работы","id":0,"data":[{"day":"Пн","closed":"Зачинено","isOpen":true,"time":{"from":"10:00","to":"18:00"}},{"day":"Вт","closed":"Закрыто","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Ср","closed":"Закрыто","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Чт","closed":"Закрыто","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Пт","closed":"Закрыто","isOpen":true,"time":{"from":"8:00","to":"18:00"}},{"day":"Сб","closed":"Закрыто","isOpen":false,"time":{"from":"8:00","to":"18:00"}},{"day":"Вс","closed":"Закрыто","isOpen":false,"time":{"from":"8:00","to":"18:00"}}]},{"title":"Соглашения сайта","id":2,"data":[]}]
