--- a/translations/other/otherua.json
+++ b/translations/other/otherua.json
@@ -7,6 +7,7 @@
         "form": "Зворотній звʼязок"
     },
     "logo": "gold-logo.png",
+    "feedbackbg": "feedback-bg.png",
     "buttons": {
         "services": "До послуги",
         "faq": "До послуги",
